# rain-tracker-service

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  Makefile  README.md  build.rs  codecov.yml  docker-compose.yml  lcov.info  openapi.json  prepare-sqlx.sh
.github/: SECRETS.md
.sqlx/: query-061715d4e1e31ff13d6162a4f15f23c377918775c8d223840bf908526e3e0c0a.json  query-082d675c7d20ebd814cea874a8ba0f0a0a35468a0484ea59bbd7d6bfbe203130.json  query-1ca8523c6311706a9955597e50aefbb6d6beac5d7db1a03178b99d1ffffe6460.json  query-1ce249b66b2948dc634c872eb16c9a571afc5745bfe97c7200c07a203347ee76.json  query-2bc977bf7b35b714da540bf1f8bdb3ffc738a470ebb366bc03c38c4db73e9cd2.json  query-2c2eb4e598c6102e84a6296ad1a90b65e9e2166059ceca16916df6f54c675546.json  query-3eeef0186e6d41aef4bffbb0ba8c6e356942851d989bf1fe94d62172871fb23a.json  query-4727522944079af0341c2f5702eb24c817cd449ed54f2d84f7e2d9d789637cd4.json  query-4c5e373839bba941c3b5e84aec43e079e95982e6fb615bcefff5f9e35b0f08aa.json  query-51ffeeb0b118a4ef2ff8628c0251ebe4060eaa04ce1770dd5d4f9ae99c4c2ab3.json  query-5cdb5f5cfe9128eadae04dc5defb716547567c2c541d7ae5de1b0c1fc94bab9d.json  query-606a4caefcf478a4ec3ec83fa2105f830781a3e7ccb8a4f063b1176c298cdeca.json  query-6baec07bb0810e35f72fbb75442b26aeae918530cdf96ba8c1a6a87e295e1c4f.json  query-78ae58eb1a09cdeab6423445143e81870de97abeb5a1601f6329ff66373eaa69.json  query-7988bec0942d2a6bf72a9c611bddfa42c29efec171ccdf299fd1d9879d4d5a3a.json  query-7a311022330a5550d5fdcff5d8f87c26ab175c34a33b63898c02d4524dcef927.json  query-85267a3b1788c76da5e11cc4c76cd2893a4bfdf892aab0dc60974d5f2d5f0221.json  query-8e669196e3d0092f7e2f5fa581cabffbef9cc63ab3db258f2651735e7307153c.json  query-8fb99dfdd08372d509eb7e0c3a9dafd271506a08be412ee587defc400a480b30.json  query-95b668aec7cd2d75887f2c0d8f6555ab89de4b1aed5f2d5fe3f14b79dd24c303.json  query-983a766b00f48dde31d4c4bd18a89a20428fc70f139d54cc2c2ca036dcd702e8.json  query-a04eefaa153fa756a330b6fc7f52e43a3e497c0d654b2e13acc7b09a34deb09a.json  query-ab3ea2346c2f0969bd9572a12c517c51f184ca519144513503c98ca2ea369f51.json  query-bd7867dc609e476543cc87daf9db9540951490c3a70d4ca782d7b36856b547a8.json  query-be4e27bb89000f043d64eab26ca051b05085f43c30181b5383b24203f91b4e64.json  query-c36f986b907c50cdd433be32989b446cb0e46fda21e7e6ee4ce8618db66a28bf.json  query-cd40d86dd8eda1a10ecf8a51225d32a33c412c9f2b3fb15ee1506e20e627d44b.json  query-cde7a74e4a2fe7156f230b823003429b26094a439df3f7a40a4615eda38aa70a.json  query-dad9f54664cf5680964fcd20937001f8cb5c120f33066f54c70112b16aed8c2a.json  query-e60e742f27883be5a3aa04088d868efc8cf6b5835a054d9797fdfd6c2b3bb4b1.json  query-ecf83357f0afe41479b6b75f2e6171335d21d447d93aacb9472fe7d7344d5215.json  query-fa46061bc1284e68ddd822a63fe9c566bb7fecfee2234a566d0ee87524e43be6.json  query-fbf8aec4443f89acbc45cfa08ea69782506efb6c573d16ac56356df0e0d5fa5c.json
docs/: fopr-meta-stats-parsing-spec.md  implementation-task-breakdown.md  kustomize-setup-summary.md  session-summary-task-4-6.md  test-architecture-refactor-plan.md
http/: api-tests.http  exploring.http  http-client.env.json
k8s/: application.yaml  configmap.yaml  deployment.yaml  kustomization.yaml  rain-tracker-sealedsecrets.yaml  sealed-secrets.yaml  service.yaml
migrations/: 20250101000000_create_readings.sql  20250102000000_change_to_double_precision.sql  20250103000000_create_gauge_summaries.sql  20250104000000_create_monthly_rainfall_summary.sql  20250105000000_add_historical_tracking.sql  20250106000000_create_gauges_table.sql  20250107000000_add_gauge_foreign_keys.sql  20250108000000_add_fopr_tracking_columns.sql  (+5 more)
(+89 files in other folders)
