[package]
name = "rain-tracker-service"
version = "0.3.0"
edition = "2021"

[lib]
name = "rain_tracker_service"
path = "src/lib.rs"

[[bin]]
name = "rain-tracker-service"
path = "src/main.rs"

[[bin]]
name = "generate-openapi"
path = "src/bin/generate-openapi.rs"

[dependencies]
axum = "0.8"
tokio = { version = "1.48", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "macros", "migrate", "chrono"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
reqwest = "0.11"
scraper = "0.19"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.5", features = ["trace"] }
dotenvy = "0.15"
thiserror = "1"
utoipa = { version = "4.2", features = ["axum_extras", "chrono"] }

[dev-dependencies]
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "macros", "migrate", "chrono"] }
