[package]
name = "rain-tracker-service"
version = "0.4.0"
edition = "2021"

[lib]
name = "rain_tracker_service"
path = "src/lib.rs"

[[bin]]
name = "rain-tracker-service"
path = "src/main.rs"

[[bin]]
name = "generate-openapi"
path = "src/bin/generate-openapi.rs"

[[bin]]
name = "historical-import"
path = "src/bin/historical_import.rs"

[[bin]]
name = "cleanup-pdf-data"
path = "src/bin/cleanup_pdf_data.rs"

[dependencies]
axum = "0.8"
tokio = { version = "1.48", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "macros", "migrate", "chrono"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
reqwest = "0.11"
scraper = "0.19"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.5", features = ["trace"] }
dotenvy = "0.15"
thiserror = "1"
utoipa = { version = "4.2", features = ["axum_extras", "chrono"] }
# Excel parsing for gauge metadata (lat/lon) from FOPR files
# Pure Rust, works with spawn_blocking(), actively maintained
calamine = { version = "0.31", features = ["dates"] }
# CLI argument parsing for import tools
clap = { version = "4.5", features = ["derive", "env"] }
# Progress bars for bulk import operations
indicatif = "0.17"
pdf-extract = "0.10.0"
# Regex for parsing metadata from FOPR files (gauge ID history, complete years count)
regex = "1"
# Async stream utilities for parallel bulk import
futures = "0.3"

[dev-dependencies]
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "macros", "migrate", "chrono"] }
